# chat

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
server/: Cargo.toml
server/src/: lib.rs
src/: App.vue  AuthPage.vue  ChatPage.vue  ConnectPage.vue  MainPage.vue  api.ts  main.ts
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/bindings/: chat_table.rs  chat_type.rs  credentials_table.rs  delete_message_reducer.rs  edit_message_reducer.rs  file_ref_type.rs  file_request_type.rs  file_table.rs  file_type.rs  linked_table.rs  linked_user_type.rs  login_reducer.rs  message_table.rs  message_type.rs  mod.rs  raw_file_table.rs  raw_file_type.rs  remove_message_reducer.rs  request_file_reducer.rs  request_stream_reducer.rs  request_table.rs  room_table.rs  send_message_reducer.rs  send_packet_reducer.rs  send_pocket_reducer.rs  send_voice_packet_reducer.rs  set_avatar_reducer.rs  signup_reducer.rs  temp_file_table.rs  temp_file_type.rs  user_credentials_type.rs  user_table.rs  user_type.rs  view_access_type.rs  view_table.rs  voice_packet_table.rs  voice_packet_type.rs  voice_room_type.rs
src/components/: File.vue  Message.vue  User.vue
