[package]
name = "chat"
version = "0.0.1"
description = "A Tauri App"
authors = ["Delfi"]
edition = "2021"

[lib]
name = "chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
spacetimedb-sdk = "1.*"
cpal = "0.15.*"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

